--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ nav ul li a:hover{
     background-color: #191919;
     color:white;
     padding-bottom: 15px;
+    padding-top: 20px;
 }
 .baris1{
    padding-bottom: 10px;
